Project

General

Profile

Actions

Bug #48883

closed

rgw: sts get_session_token always failed

Added by joke lee over 3 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
sts
Backport:
octopus pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

get_session_token always failed because of wrong check on duration


Related issues 3 (0 open3 closed)

Has duplicate rgw - Bug #48885: rgw: failed download object when use presigned (v2) url create by sts DuplicatePritha Srivastava

Actions
Copied to rgw - Backport #49361: octopus: rgw: sts get_session_token always failedResolvedNathan CutlerActions
Copied to rgw - Backport #49362: pacific: rgw: sts get_session_token always failedResolvedsinguliere _Actions
Actions #2

Updated by Casey Bodley over 3 years ago

  • Status changed from New to Fix Under Review
Actions #3

Updated by Kefu Chai about 3 years ago

  • Pull request ID set to 38917
Actions #4

Updated by Casey Bodley about 3 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Tags set to sts
  • Backport set to octopus pacific
Actions #5

Updated by Casey Bodley about 3 years ago

  • Has duplicate Bug #48885: rgw: failed download object when use presigned (v2) url create by sts added
Actions #6

Updated by Backport Bot about 3 years ago

  • Copied to Backport #49361: octopus: rgw: sts get_session_token always failed added
Actions #7

Updated by Backport Bot about 3 years ago

  • Copied to Backport #49362: pacific: rgw: sts get_session_token always failed added
Actions #8

Updated by Loïc Dachary about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF