rgw: fix sts get_session_token always failed because of wrong check

fix https://tracker.ceph.com/issues/48883

Signed-off-by: yuliyang_yewu <yuliyang_yewu@cmss.chinamobile.com>
(cherry picked from commit bf9c66e16dfc704c3471f42d9f6b9b1682f9969e)